--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,28 +7,35 @@ on:
 
 jobs:
   build:
-  
-    runs-on: ubuntu-latest    
+
+    runs-on: ubuntu-latest
     env:
       TZ: Asia/Shanghai
       TAG_NUMBER: $GITHUB_RUN_NUMBER
     steps:
     - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
+    - name: Docker Setup QEMU
+      uses: docker/setup-qemu-action@v1.2.0
+    - name: Docker Setup Buildx
+      uses: docker/setup-buildx-action@v1.5.1
+    - name: Login to Docker Hub
+      uses: docker/login-action@v1.10.0
       with:
-        dotnet-version: 6.0.400
+        Username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        Password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
     - name: Get tag
       id: tag
       uses: dawidd6/action-get-tag@v1
       with:
         # Optionally strip `v` prefix
         strip_v: true
-    - name: Set VERSION variable from tag
-      run: echo ${{steps.tag.outputs.tag}} 
-    - name: Build with dotnet
-      run: dotnet build --configuration Release Bilibili.Live.Checker 
-    - name: Pack
-      run: dotnet pack Bilibili.Live.Checker -c Release --include-symbols --include-source -p:PackageVersion=${{steps.tag.outputs.tag}} -o artifacts/
-    - name: Publish Symbols to NuGet
-      run: dotnet nuget push artifacts/*.symbols.nupkg --api-key ${{secrets.NUGET_API_KEY}} --source https://api.nuget.org/v3/index.json
+    - name: Build and push
+      uses: docker/build-push-action@v2.6.1
+      with:
+        context: ./
+        file: ./Bilibili.Live.Checker/Dockerfile
+        platforms: linux/amd64
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/bilibili.live.checker:latest,${{ secrets.DOCKER_HUB_USERNAME }}/bilibili.live.checker:${{steps.tag.outputs.tag}}
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
