增加topicIds参数 增加可设置的轮询间隔时间

--- a/Bilibili.Live.Checker/appsetting.json
+++ b/Bilibili.Live.Checker/appsetting.json
@@ -1,9 +1,11 @@
 ﻿{
+  "interval": 10,
   "wxpusher": {
     "APPTOKEN": "",
     "users": [
       {
         "uid": "",
+        "topicId": "",
         "name": "狐狸",
         "DNDPeriod": [
           "00:00:00-08:00:00"
