--- a/Bilibili.Live.Checker/appsetting.json
+++ b/Bilibili.Live.Checker/appsetting.json
@@ -1,18 +1,20 @@
 ﻿{
   "interval": 10,
   "wxpusher": {
-    "APPTOKEN": "",
+    "APPTOKEN": "AT_VOFmJO9V2DQva3w34i23lh6EHyP8wecR",
     "users": [
       {
         "uid": "",
-        "topicId": "",
-        "name": "狐狸",
+        "topicId": "12454",
+        "name": "芋",
         "DNDPeriod": [
-          "00:00:00-08:00:00"
+          "00:00:00-00:00:00"
         ],
         "bilibili": {
           "uids": [
-            ""
+            "50329118",
+            "2412557",
+            "110631"
           ]
         }
       }
