--- a/Bilibili.Live.Checker/appsetting.json
+++ b/Bilibili.Live.Checker/appsetting.json
@@ -12,9 +12,8 @@
         ],
         "bilibili": {
           "uids": [
-            "",
-            "",
-            ""
+          ],
+          "roomids": [
           ]
         }
       }
