--- a/Bilibili.Live.Checker/Dockerfile
+++ b/Bilibili.Live.Checker/Dockerfile
@@ -5,7 +5,9 @@ WORKDIR /app
 ENV wxpusher_APPTOKEN=
 
 RUN apt-get update && apt-get install -y wget unzip libgdiplus libfontconfig
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub > /tmp/linux_signing_key.pub \
+    && apt-key add /tmp/linux_signing_key.pub \
+    && rm /tmp/linux_signing_key.pub
 RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
 RUN apt-get update && apt-get install -y google-chrome-stable
 RUN wget https://chromedriver.storage.googleapis.com/120.0/chromedriver_linux64.zip
